[package]
name = "eth-handshake"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
alloy-rlp = { version = "0.3.4", features = ["derive"] }
anyhow = "1.0.81"
cipher = { version = "0.4.3", features = ["block-padding"] }
clap = { version = "4.5.4", features = ["derive"] }
concat-kdf = "0.1.0"
ctr = "0.9.2"
hmac = "0.12.1"
primitive-types = "0.12.2"
rand = "0.8.5"
secp256k1 = { version = "0.29.0", features = ["rand-std", "recovery"] }
sha2 = "0.10.8"
sha3 = "0.10.8"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
] }
url = "2.5.0"
